hsmc-macros/tests/ui/t9_1_duplicate_transition.stderr
error: duplicate transition on trigger `Go` in state `Red`
  --> tests/ui/t9_1_duplicate_transition.rs:15:12
   |
15 |         on(Go) => Yellow;
   |            ^^

error[E0405]: cannot find trait `MActions` in this scope
  --> tests/ui/t9_1_duplicate_transition.rs:22:6
   |
22 | impl MActions for MActionContext<'_> {
   |      ^^^^^^^^ not found in this scope

error[E0425]: cannot find type `MActionContext` in this scope
  --> tests/ui/t9_1_duplicate_transition.rs:22:19
   |
22 | impl MActions for MActionContext<'_> {
   |                   ^^^^^^^^^^^^^^ not found in this scope

warning: unused import: `Duration`
 --> tests/ui/t9_1_duplicate_transition.rs:1:24
  |
1 | use hsmc::{statechart, Duration};
  |                        ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
